section club-cards
complete section club-cards

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -541,6 +541,10 @@ body {
           transform: translate(0, 0);
 }
 
+.club-cards {
+  padding-bottom: 4.571rem;
+}
+
 .club-cards__header {
   margin-bottom: 2.214rem;
 }
@@ -554,10 +558,33 @@ body {
           justify-content: space-between;
 }
 
+.club-cards__card {
+  max-width: 550px;
+  max-height: 370px;
+}
+
 .club-cards__months-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.club-cards__adress-wrapper {
+  margin-top: 1.643rem;
+}
+
+.club-cards__personality-info-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
 }
 
 .club-cards__input-months {
@@ -578,11 +605,23 @@ body {
   opacity: 0;
 }
 
+.club-cards__input-adress:checked + .club-cards__label-adress::before {
+  background: url("../img/club-cards/arrow-checkbox.png") no-repeat center #ffd11a;
+  border-color: #ffd11a;
+}
+
+.club-cards__label-adress {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .club-cards__label-adress::before {
   content: '';
   display: inline-block;
   width: 20px;
   height: 20px;
+  margin-right: 0.857rem;
   border: 1px solid #b7b7b7;
   border-radius: 25%;
 }
@@ -621,6 +660,95 @@ body {
   color: #504331;
 }
 
+.club-cards__input-personality-info {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  font-size: 1rem;
+  padding: 1.286rem 0 1.286rem 1.786rem;
+  border: 1px solid #b7b7b7;
+}
+
+.club-cards__input-personality-info:first-child {
+  margin-bottom: 0.857rem;
+  margin-top: 1.714rem;
+}
+
+.club-cards__input-personality-info:-placeholder {
+  color: #94939a;
+  font-size: 1rem;
+}
+
+.club-cards__input-personality-info::-moz-placeholder {
+  color: #94939a;
+  font-size: 1rem;
+}
+
+.club-cards__policy-personality-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-top: 1.143rem;
+  margin-left: 1.5rem;
+  margin-bottom: 1.143rem;
+}
+
+.club-cards__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #94939a;
+}
+
+.club-cards__label::before {
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-right: 0.857rem;
+  border: 1px solid #b7b7b7;
+  border-radius: 25%;
+}
+
+.club-cards__checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.club-cards__checkbox:checked + .club-cards__label::before {
+  background: url("../img/club-cards/arrow-checkbox.png") no-repeat center #ffd11a;
+  border-color: #ffd11a;
+}
+
+.club-cards__button {
+  font-size: 0.857rem;
+  line-height: 1;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 1.1rem 1.714rem;
+  -webkit-transform: translateY(-15%);
+          transform: translateY(-15%);
+}
+
+.club-cards__button-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
 .club-card {
   position: relative;
   -ms-flex-preferred-size: 40%;
@@ -650,6 +778,10 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+.input-group__adress:last-child {
+  margin-top: 1.423rem;
 }
 
 .label-adress__description {
