--- a/src/css/style.css
+++ b/src/css/style.css
@@ -668,19 +668,22 @@ body {
   border: 1px solid #b7b7b7;
 }
 
-.club-cards__input-personality-info:first-child {
+.club-cards__input-personality-info:invalid + .club-cards__placeholder {
+  display: block;
+}
+
+.club-cards__input-group-personality-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  position: relative;
+}
+
+.club-cards__input-group-personality-info:first-child {
   margin-bottom: 0.857rem;
   margin-top: 1.714rem;
-}
-
-.club-cards__input-personality-info:-placeholder {
-  color: #94939a;
-  font-size: 1rem;
-}
-
-.club-cards__input-personality-info::-moz-placeholder {
-  color: #94939a;
-  font-size: 1rem;
 }
 
 .club-cards__policy-personality-info {
@@ -747,6 +750,21 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+.club-cards__placeholder {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  -webkit-transform: translate(0%, -50%);
+          transform: translate(0%, -50%);
+  color: #94939a;
+  font-size: 1rem;
+}
+
+.club-cards__placeholder-star {
+  color: #ffd11a;
 }
 
 .club-card {
