--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -2,6 +2,7 @@
   border: 1px solid #ffd11a
   border-radius: 50px
   padding: 1rem 1.714rem
+  outline: none
   &--yellow
     background-color: $yellow
   &--large
